@@ -4,6 +4,7 @@
 #include "SymbolHelpers.hpp"
 #include <Pothos/Framework.hpp>
 #include <algorithm> //min/max
+#include <iostream>
 
 /***********************************************************************
  * |PothosDoc Bytes to Symbols
@@ -86,11 +87,57 @@ public:
         else throw Pothos::InvalidArgumentException("BytesToSymbols::setBitOrder()", "Order must be LSBit or MSBit");
     }
 
+    void msgWork(const Pothos::Packet &inPkt)
+    {
+        //calculate conversion and buffer sizes (round up)
+        const size_t numBytes = ((inPkt.payload.elements() + _reserveBytes - 1)/_reserveBytes)*_reserveBytes;
+        const size_t numSyms = (numBytes*8)/_mod;
+
+        //create a new packet for output symbols
+        Pothos::Packet outPkt;
+        auto outPort = this->output(0);
+        if (outPort->elements() >= numSyms)
+        {
+            outPkt.payload = outPort->buffer();
+            outPkt.payload.length = numSyms;
+            outPort->popBuffer(numSyms);
+        }
+        else outPkt.payload = Pothos::BufferChunk(numSyms);
+
+        //perform conversion
+        auto in = inPkt.payload.as<const unsigned char*>();
+        auto out = outPkt.payload.as<unsigned char*>();
+        switch (_order)
+        {
+        case MSBit: ::bytesToSymbolsMSBit(_mod, in, out, numBytes); break;
+        case LSBit: ::bytesToSymbolsLSBit(_mod, in, out, numBytes); break;
+        }
+
+        //copy and adjust labels
+        for (const auto &label : inPkt.labels)
+        {
+            outPkt.labels.push_back(label.toAdjusted(8, _mod));
+        }
+
+        //post the output packet
+        outPort->postMessage(outPkt);
+    }
+
     void work(void)
     {
         auto inPort = this->input(0);
         auto outPort = this->output(0);
         inPort->setReserve(_reserveBytes);
+
+        //handle packet conversion if applicable
+        if (inPort->hasMessage())
+        {
+            auto msg = inPort->popMessage();
+            if (msg.type() == typeid(Pothos::Packet))
+                this->msgWork(msg.extract<Pothos::Packet>());
+            else outPort->postMessage(msg);
+            return; //output buffer used, return now
+        }
 
         //calculate work size given reserve requirements
         const size_t numInBytes = (inPort->elements()/_reserveBytes)*_reserveBytes;
